ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/CnP_PaaS__CnP_Campaign_Lift_URL__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Campaign_Lift_URL__c</fullName>
    <label>C&amp;P Campaign Lift URL</label>
    <type>Url</type>
</CustomField>