ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/CnP_PaaS__CnP_Campaign_Lift_URL_Autocomplete__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Campaign_Lift_URL_Autocomplete__c</fullName>
    <label>C&amp;P Campaign Lift URL Autocomplete</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>