ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/CnP_PaaS__CnP_Increment__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Increment__c</fullName>
    <label>C&amp;P Increment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>