ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/CnP_PaaS__CnP_Lift_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Last_Updated__c</fullName>
    <label>C&amp;P Lift Last Updated</label>
    <type>Date</type>
</CustomField>