ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/Member_Participation_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Participation_Type__c</fullName>
    <inlineHelpText>Campaign Member type of participation.</inlineHelpText>
    <label>Member Participation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Next Gen</fullName>
            </value>
            <value>
                <fullName>GC Member w private sponsor</fullName>
            </value>
            <value>
                <fullName>Event_Vendor</fullName>
                <label>Event Vendor</label>
            </value>
            <value>
                <fullName>Event_Facilitator</fullName>
                <label>Event Facilitator</label>
            </value>
            <value>
                <fullName>Event_Panelist</fullName>
                <label>Event Panelist</label>
            </value>
            <value>
                <fullName>Event_Speaker</fullName>
                <label>Event Speaker</label>
            </value>
            <value>
                <fullName>Event_General_Invite</fullName>
                <label>Event General Invite</label>
            </value>
            <value>
                <fullName>Event_Sponsor</fullName>
                <label>Event Sponsor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>