ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/Needs_To_Be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Needs_To_Be_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Donor needs to be contacted, because 1) CC transaction failed  2) falling behind pledge goal (?)</description>
    <label>Needs To Be Contacted</label>
    <type>Checkbox</type>
</CustomField>