ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/Paid_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Paid_Ticket__c</fullName>
    <description>Price of ticket(s) for event.</description>
    <inlineHelpText>NET ticket price.  (Excludes fees).</inlineHelpText>
    <label>Paid Ticket</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>