ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Familia</fullName>
            </value>
            <value>
                <fullName>Hope</fullName>
            </value>
            <value>
                <fullName>Unity</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>