ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/fields/Typical_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Typical_Payment_Method__c</fullName>
    <description>Typical method of payment.</description>
    <label>Typical Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old NFG (DonateNow)</fullName>
                <color>#FF6666</color>
                <default>true</default>
                <label>Old NFG (DonateNow)</label>
            </value>
            <value>
                <fullName>New NFG (GiveCorps)</fullName>
                <color>#33FF33</color>
                <label>New NFG (GiveCorps)</label>
            </value>
            <value>
                <fullName>Check</fullName>
                <color>#E27001</color>
                <label>Check</label>
            </value>
            <value>
                <fullName>ACH or EFT</fullName>
                <color>#A845DC</color>
                <label>ACH or EFT</label>
            </value>
            <value>
                <fullName>PayPal</fullName>
                <color>#F3D904</color>
                <label>PayPal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>