ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/recordTypes/General_campaign_member.recordType-meta.xml
<RecordType>
    <fullName>General_campaign_member</fullName>
    <active>true</active>
    <description>Campaign Member that is not LGC member.</description>
    <label>General campaign member</label>
</RecordType>