ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CampaignMember/recordTypes/Giving_Circle_Member.recordType-meta.xml
<RecordType>
    <fullName>Giving_Circle_Member</fullName>
    <active>true</active>
    <description>Record type for GC members within Campaign Members.</description>
    <label>Giving Circle Member</label>
</RecordType>